[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["r12f <r12f.code@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.5"
regex = "1.3.4"
futures = { version = "0.3.26", features = ["thread-pool"] }
surf = "2.3.2"
lcrt-macro = "0.1.0"
lcrt = "0.1.0"
html2md = "0.2.14"

[lib]
doctest = false
test = true
